[metadata]
name = erxepy
version = 0.0.1
author = Tawfik Yasser
author_email = tawfekyassertawfek@gmail.com
description = Easy Regular Expression Python Module
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TawfikYasser/erxepy
project_urls =
    Bug Tracker = https://github.com/TawfikYasser/erxepy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src/package